<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img1"
    tools:context=".Activities.order_step1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/grad_"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/reciever_details"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/receiver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/reciever_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#98FFFFFF"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/receiver_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/reciever_location"
            android:ems="10"
            android:hint="@string/reciever_address"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#98FFFFFF"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


        <Spinner
            android:id="@+id/type_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/length_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/length_m"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="#98FFFFFF"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/width_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/width_m"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="#98FFFFFF"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/height_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/height_m"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="#98FFFFFF"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Spinner
                android:id="@+id/dimensions_unit_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weight_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/weight_kg"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="#98FFFFFF"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/Weight_unit_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/value_of_parcel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/value_of_parcel"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#98FFFFFF"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColor="#FFFFFF" />

        <com.chaos.view.PinView
            android:id="@+id/receiver_no"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@drawable/grad_"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            app:hideLineWhenFilled="true"
            app:itemCount="10"
            app:itemHeight="40dp"
            app:itemRadius="13dp"
            app:itemSpacing="1dp"
            app:itemWidth="30dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pin_code"
            android:textColor="#FFFFFF"
            android:textColorHint="#98FFFFFF" />

        <com.chaos.view.PinView
            android:id="@+id/receiver_pin"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@drawable/grad_"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemRadius="13dp"
            app:itemSpacing="1dp"
            app:itemWidth="30dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:srcCompat="@drawable/shipping" />

    <Button
        android:id="@+id/next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_weight="1"
        android:background="@drawable/sucess_button"
        android:padding="10dp"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>